test: ChatServiceImplTest 100% coverage